--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 
 @import"./base/_base.scss";
 
+@import"./composant/_animations";
 @import"./composant/_bouton.scss";
 
 @import"./layout/_header.scss";
