--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,45 @@ footer {
   vertical-align: baseline;
 }
 
+.far:hover {
+  animation: heart_1 600ms both ease-in-out;
+}
+
+.far:hover ~ .fas {
+  display: block;
+  background: -webkit-linear-gradient(#9356dc, #ff79da);
+  -webkit-background-clip: text;
+  color: transparent;
+  animation: animation-heart 800ms ease-in-out;
+}
+
+@keyframes heart_1 {
+  100% {
+    opacity: 0;
+  }
+  75% {
+    opacity: .25;
+  }
+  50% {
+    opacity: .50;
+  }
+  25% {
+    opacity: .75;
+  }
+  0% {
+    opacity: 1;
+  }
+}
+
+@keyframes animation-heart {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 /* bouton version desktop*/
 .button {
   width: 400px;
