--- a/css/style.css
+++ b/css/style.css
@@ -42,13 +42,13 @@ footer {
     opacity: 0;
   }
   75% {
-    opacity: .25;
+    opacity: 0.25;
   }
   50% {
-    opacity: .50;
+    opacity: 0.50;
   }
   25% {
-    opacity: .75;
+    opacity: 0.75;
   }
   0% {
     opacity: 1;
