--- a/sass/composant/_animations.scss
+++ b/sass/composant/_animations.scss
@@ -15,13 +15,13 @@
         opacity: 0;
     }
     75%{
-        opacity: .25;
+        opacity: 0.25;
     }
     50%{
-        opacity: .50;
+        opacity: 0.50;
     }
     25%{
-        opacity: .75;
+        opacity: 0.75;
     }
     0%{
         opacity: 1;
