--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ footer {
 
 .far:hover ~ .fas {
   display: block;
-  background: -webkit-linear-gradient(#9356dc, #ff79da);
-  -webkit-background-clip: text;
+  background: linear-gradient(#9356dc, #ff79da);
+  background-clip: text;
   color: transparent;
   animation: animation-heart 800ms ease-in-out;
 }
