--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ footer {
 
 .far:hover ~ .fas {
   display: block;
-  background: linear-gradient(#9356dc, #ff79da);
-  background-clip: text;
+  background: -webkit-linear-gradient(#9356dc, #ff79da);
+  -webkit-background-clip: text;
   color: transparent;
   animation: animation-heart 800ms ease-in-out;
 }
@@ -61,6 +61,47 @@ footer {
   }
   to {
     opacity: 1;
+  }
+}
+
+.spinner {
+  position: fixed;
+  top: 50%;
+  left: 47%;
+  width: 100px;
+  height: 100px;
+  animation: spinner 1s  linear infinite;
+}
+
+.spinner span {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.spinner .spinner-inner-1 {
+  background: linear-gradient(to right, rgba(147, 86, 220, 0) 0%, rgba(147, 86, 220, 0) 50%, #9356dc 51%);
+}
+
+.spinner .spinner-inner-2 {
+  background: linear-gradient(to top, rgba(255, 121, 218, 0) 0%, #ff79da 100%);
+}
+
+.spinner .spinner-inner-3 {
+  top: 10px;
+  left: 10px;
+  width: 80px;
+  height: 80px;
+  background: #ff79da;
+}
+
+@keyframes spinner {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 
