--- a/css/style.css
+++ b/css/style.css
@@ -64,44 +64,104 @@ footer {
   }
 }
 
+/*animation spinner*/
 .spinner {
-  position: fixed;
-  top: 50%;
-  left: 47%;
-  width: 100px;
-  height: 100px;
-  animation: spinner 1s  linear infinite;
-}
-
-.spinner span {
-  position: absolute;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: disparition 3s both 2600ms;
   width: 100%;
   height: 100%;
+  z-index: 2;
+  position: fixed;
+}
+
+.spin-cercle-1, .spin-cercle-2, .spin-cercle-3 {
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
+  border: 90px solid #fff;
+  border-right: 90px solid #99e2d0;
+  transform-origin: center;
+  animation: rotate-1 3000ms both;
+  position: absolute;
+  margin: auto;
 }
 
-.spinner .spinner-inner-1 {
-  background: linear-gradient(to right, rgba(147, 86, 220, 0) 0%, rgba(147, 86, 220, 0) 50%, #9356dc 51%);
+.spin-cercle-2 {
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  border: 68px solid #fff;
+  border-right: 68px solid #ff79da;
+  animation: rotate-1 3000ms both 300ms;
 }
 
-.spinner .spinner-inner-2 {
-  background: linear-gradient(to top, rgba(255, 121, 218, 0) 0%, #ff79da 100%);
+.spin-cercle-3 {
+  width: 305px;
+  height: 305px;
+  border-radius: 50%;
+  border: 45px solid #fff;
+  border-right: 45px solid #9356dc;
+  animation: rotate-1 3000ms both 600ms;
 }
 
-.spinner .spinner-inner-3 {
-  top: 10px;
-  left: 10px;
-  width: 80px;
-  height: 80px;
-  background: #ff79da;
-}
-
-@keyframes spinner {
+@keyframes rotate-1 {
   from {
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(1080deg);
+  }
+}
+
+@keyframes disparition {
+  100% {
+    position: relative;
+    top: -500px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .spin-cercle-1, .spin-cercle-2, .spin-cercle-3 {
+    width: 90px;
+    height: 90px;
+    border: 40px solid #fff;
+    border-right: 40px solid #99e2d0;
+  }
+  .spin-cercle-2 {
+    width: 70px;
+    height: 70px;
+    border: 30px solid #fff;
+    border-right: 30px solid #ff79da;
+  }
+  .spin-cercle-3 {
+    width: 45px;
+    height: 45px;
+    border: 20px solid #fff;
+    border-right: 20px solid #9356dc;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .spin-cercle-1, .spin-cercle-2, .spin-cercle-3 {
+    width: 200px;
+    height: 200px;
+    border: 45px solid #fff;
+    border-right: 45px solid #99e2d0;
+  }
+  .spin-cercle-2 {
+    width: 175px;
+    height: 175px;
+    border: 34px solid #fff;
+    border-right: 34px solid #ff79da;
+  }
+  .spin-cercle-3 {
+    width: 150px;
+    height: 150px;
+    border: 23px solid #fff;
+    border-right: 23px solid #9356dc;
   }
 }
 
