--- a/sass/composant/_animations.scss
+++ b/sass/composant/_animations.scss
@@ -36,49 +36,106 @@
     }
 }
 
-$spinner: $color-primary;
-$background:$color-secondary;
-$size: 100px;
+/*animation spinner*/
+
 
 .spinner {
-  position:fixed;
-  top: 50%;
-  left: 47%;
-  width: $size;
-  height: $size;
-  animation: spinner 1s  linear infinite ;
- 
-  
- 
-  
-  span {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
+  background-color: $color-white;
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  animation: disparition 3s both 2600ms;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  position: fixed;
+}
+.spin-cercle {
+  &-1 {
+      width: 400px;
+      height: 400px;
+      border-radius: 50%;
+      border: 90px solid $color-white;
+      border-right: 90px solid $color-tertiary;
+      transform-origin: center;
+      animation: rotate-1 3000ms both;
+      position: absolute;
+      margin: auto;
   }
-  
-  .spinner-inner-1 {
-    background: linear-gradient(to right, rgba($spinner,0) 0%,rgba($spinner,0) 50%,$spinner 51%);
+  &-2 {
+      width: 350px;
+      height: 350px;
+      border-radius: 50%;
+      border: 68px solid $color-white;
+      border-right: 68px solid $color-secondary;
+      animation: rotate-1 3000ms both 300ms;
+      @extend .spin-cercle-1;
   }
-  
-  .spinner-inner-2 {
-    background: linear-gradient(to top, rgba($background,0) 0%,$background 100%);
-  }
-  
-  .spinner-inner-3 {
-    $offset: $size * 0.1;
-    top: $offset;
-    left: $offset;
-    width: $size - ($offset * 2);
-    height: $size - ($offset * 2);
-    background: $background;
+  &-3 {
+      width: 305px;
+      height: 305px;
+      border-radius: 50%;
+      border: 45px solid $color-white;
+      border-right: 45px solid $color-primary;
+      animation: rotate-1 3000ms both 600ms;
+      @extend .spin-cercle-1;
   }
 }
-
-@keyframes spinner {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-  
-
+@keyframes rotate-1 {
+  from {
+      transform: rotate(0);
+  }
+  to {
+      transform: rotate(1080deg);
+  }
+}
+@keyframes disparition {
+  100% {
+      position: relative;
+      top: -500px;
+  }
+}
+@media screen and (max-width: map-get($breakpoint, mobile)) {
+  .spin-cercle {
+      &-1 {
+          width: 90px;
+          height: 90px;
+          border: 40px solid $color-white;
+          border-right: 40px solid $color-tertiary;
+      }
+      &-2 {
+          width: 70px;
+          height: 70px;
+          border: 30px solid $color-white;
+          border-right: 30px solid $color-secondary;
+      }
+      &-3 {
+          width: 45px;
+          height: 45px;
+          border: 20px solid $color-white;
+          border-right: 20px solid $color-primary;
+      }
+  }
+}
+@media (min-width: map-get($breakpoint, minitablet)) and (max-width: map-get($breakpoint, maxtablet)) {
+  .spin-cercle {
+      &-1 {
+          width: 200px;
+          height: 200px;
+          border: 45px solid $color-white;
+          border-right: 45px solid $color-tertiary;
+      }
+      &-2 {
+          width: 175px;
+          height: 175px;
+          border: 34px solid $color-white;
+          border-right: 34px solid $color-secondary;
+      }
+      &-3 {
+          width: 150px;
+          height: 150px;
+          border: 23px solid $color-white;
+          border-right: 23px solid $color-primary;
+      }
+  }
 }
