--- a/sass/composant/_animations.scss
+++ b/sass/composant/_animations.scss
@@ -1,5 +1,6 @@
 .far:hover{
-    animation: heart_1 600ms both ease-in-out;
+    -webkit-animation: heart_1 600ms both ease-in-out;
+            animation: heart_1 600ms both ease-in-out;
 }
 .far{
     &:hover ~ .fas {
@@ -7,7 +8,25 @@
         background: -webkit-linear-gradient($color-primary, $color-secondary);
         -webkit-background-clip: text;
         color:transparent;
-        animation: animation-heart 800ms ease-in-out;
+        -webkit-animation: animation-heart 800ms ease-in-out;
+                animation: animation-heart 800ms ease-in-out;
+    }
+}
+@-webkit-keyframes heart_1{
+    100%{
+        opacity: 0;
+    }
+    75%{
+        opacity: 0.25;
+    }
+    50%{
+        opacity: 0.50;
+    }
+    25%{
+        opacity: 0.75;
+    }
+    0%{
+        opacity: 1;
     }
 }
 @keyframes heart_1{
@@ -24,6 +43,14 @@
         opacity: 0.75;
     }
     0%{
+        opacity: 1;
+    }
+}
+@-webkit-keyframes animation-heart{
+    from{
+        opacity: 0;
+    }
+    to{
         opacity: 1;
     }
 }
@@ -44,7 +71,8 @@
   display: flex;
   align-items:center;
   justify-content: center;
-  animation: disparition 3s both 2600ms;
+  -webkit-animation: disparition 3s both 2600ms;
+          animation: disparition 3s both 2600ms;
   width: 100%;
   height: 100%;
   z-index: 2;
@@ -58,7 +86,8 @@
       border: 90px solid $color-white;
       border-right: 90px solid $color-tertiary;
       transform-origin: center;
-      animation: rotate-1 3000ms both;
+      -webkit-animation: rotate-1 3000ms both;
+              animation: rotate-1 3000ms both;
       position: absolute;
       margin: auto;
   }
@@ -68,7 +97,8 @@
       border-radius: 50%;
       border: 68px solid $color-white;
       border-right: 68px solid $color-secondary;
-      animation: rotate-1 3000ms both 300ms;
+      -webkit-animation: rotate-1 3000ms both 300ms;
+              animation: rotate-1 3000ms both 300ms;
       @extend .spin-cercle-1;
   }
   &-3 {
@@ -77,8 +107,17 @@
       border-radius: 50%;
       border: 45px solid $color-white;
       border-right: 45px solid $color-primary;
-      animation: rotate-1 3000ms both 600ms;
+      -webkit-animation: rotate-1 3000ms both 600ms;
+              animation: rotate-1 3000ms both 600ms;
       @extend .spin-cercle-1;
+  }
+}
+@-webkit-keyframes rotate-1 {
+  from {
+      transform: rotate(0);
+  }
+  to {
+      transform: rotate(1080deg);
   }
 }
 @keyframes rotate-1 {
@@ -87,6 +126,12 @@
   }
   to {
       transform: rotate(1080deg);
+  }
+}
+@-webkit-keyframes disparition {
+  100% {
+      position: relative;
+      top: -500px;
   }
 }
 @keyframes disparition {
