--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -1,5 +1,5 @@
 @mixin police1 {
-    font-family: "Shand", sans-serif;
+    font-family: "shrikhand", sans-serif;
 }
 @mixin police2 {
     font-family: "Roboto", "trebuchet MS", sans-serif;
